--- a/Externals.cfg
+++ b/Externals.cfg
@@ -21,15 +21,16 @@ local_path = components/cice6
 externals = Externals.cfg
 required = True
 
+# branch for history updates
 [cmeps]
-tag = cmeps0.13.25
+branch = features/history_updates
 protocol = git
-repo_url = https://github.com/ESCOMP/CMEPS.git
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cdeps]
-tag = cdeps0.12.21
+tag = cdeps0.12.23
 protocol = git
 repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
@@ -65,9 +66,9 @@ local_path = libraries/parallelio
 required = True
 
 [cime]
-tag = cime6.0.6
+tag = features/history_updates
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/mvertens/cime
 local_path = cime
 required = True
 
