--- a/Externals.cfg
+++ b/Externals.cfg
@@ -20,27 +20,22 @@ repo_url = https://github.com/ESCOMP/CESM_CICE5
 local_path = components/cice5
 required = True
 
-[cice6]
-#tag = cesm_cice6_2_0_16
+[cice6] #mvertens branch#
 branch = feature/add_icewave_coupling
 protocol = git
-#repo_url = https://github.com/ESCOMP/CESM_CICE
 repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
 
 [cmeps]
-#tag = cmeps0.13.47
-branch = feature/add_icewave_coupling
+tag = cmeps0.13.64
 protocol = git
-#repo_url = https://github.com/ESCOMP/CMEPS.git
-repo_url = https://github.com/mvertens/CMEPS.git
+repo_url = https://github.com/ESCOMP/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cdeps]
-#tag = cdeps0.12.41
 tag = cdeps0.12.45
 protocol = git
 repo_url = https://github.com/ESCOMP/CDEPS.git
@@ -77,8 +72,7 @@ local_path = libraries/parallelio
 required = True
 
 [cime]
-#tag = cime6.0.16
-hash = e42cdfd75
+tag = cime6.0.23
 protocol = git
 repo_url = https://github.com/ESMCI/cime
 local_path = cime
@@ -145,14 +139,13 @@ repo_url = https://github.com/ESCOMP/WW3-CESM
 local_path = components/ww3
 required = True
 
-[ww3dev]
-#tag = dev/unified_220202
+[ww3dev] #mvertens branch#
 branch = feature/add_icewave_coupling
 protocol = git
-#repo_url = https://github.com/ESCOMP/WW3-CESM
-repo_url = https://github.com/mvertens/WW3-CESM
+repo_url = https://github.com/mvertens/WW3_interface.git
 local_path = components/ww3dev
-required = False
+externals = Externals.cfg
+required = True
 
 [externals_description]
 schema_version = 1.0.01
