--- a/Externals.cfg
+++ b/Externals.cfg
@@ -139,10 +139,10 @@ repo_url = https://github.com/ESCOMP/WW3-CESM
 local_path = components/ww3
 required = True
 
-[ww3dev] #mvertens branch#
-branch = feature/add_icewave_coupling
+[ww3dev]
+tag = main_0.0.2
 protocol = git
-repo_url = https://github.com/mvertens/WW3_interface.git
+repo_url = https://github.com/ESCOMP/WW3_interface.git
 local_path = components/ww3dev
 externals = Externals.cfg
 required = True
