added swh for Thomas

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -29,9 +29,11 @@ externals = Externals.cfg
 required = True
 
 [cmeps]
-tag = cmeps0.13.45
+#tag = cmeps0.13.45
+branch=feature/for_thomas
 protocol = git
-repo_url = https://github.com/ESCOMP/CMEPS.git
+#repo_url = https://github.com/ESCOMP/CMEPS.git
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
@@ -140,10 +142,13 @@ local_path = components/ww3
 required = True
 
 [ww3dev]
-tag = dev/ncar_220111
+#tag = main_0.0.2
+branch=feature/for_thomas
 protocol = git
-repo_url = https://github.com/ESCOMP/WW3-CESM
+#repo_url = https://github.com/ESCOMP/WW3_interface
+repo_url = https://github.com/mvertens/WW3_interface
 local_path = components/ww3dev
+externals = Externals.cfg
 required = False
 
 [externals_description]
