--- a/Externals.cfg
+++ b/Externals.cfg
@@ -72,9 +72,10 @@ local_path = libraries/parallelio
 required = True
 
 [cime]
-tag = cime6.0.82
+#tag = cime6.0.82
+branch = feature/add_schism
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/mvertens/cime
 local_path = cime
 required = True
 
@@ -153,6 +154,15 @@ repo_url = https://github.com/ESCOMP/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
 required = False
+
+[schism]
+#tag = ???
+branch = feature/cime_compliance
+protocol = git
+repo_url = https://github.com/mvertens/schism-esmf.git
+local_path = schism
+externals = Externals.cfg
+required = True
 
 [externals_description]
 schema_version = 1.0.01
