fixed path of checkout for schism

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -160,7 +160,7 @@ required = False
 branch = feature/cime_compliance
 protocol = git
 repo_url = https://github.com/mvertens/schism-esmf.git
-local_path = schism
+local_path = components/schism
 externals = Externals.cfg
 required = True
 
