new docn capabilities

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -29,16 +29,20 @@ externals = Externals.cfg
 required = True
 
 [cmeps]
-tag = cmeps0.14.2
+hash = 70d6913
+#tag = cmeps0.14.2
 protocol = git
-repo_url = https://github.com/ESCOMP/CMEPS.git
+#repo_url = https://github.com/ESCOMP/CMEPS.git
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cdeps]
-tag = cdeps0.12.67
+#tag = cdeps0.12.67
+hash = 70d6913
 protocol = git
-repo_url = https://github.com/ESCOMP/CDEPS.git
+#repo_url = https://github.com/ESCOMP/CDEPS.git
+repo_url = https://github.com/mvertens/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
@@ -133,7 +137,7 @@ local_path = tools/statistical_ensemble_test/pyCECT
 required = False
 
 [rtm]
-tag = rtm1_0_78 
+tag = rtm1_0_78
 protocol = git
 repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
