updates to ESCOMP latest for cmeps and cdeps

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -29,20 +29,16 @@ externals = Externals.cfg
 required = True
 
 [cmeps]
-hash = 70d6913
-#tag = cmeps0.14.2
+tag = cmeps0.14.16
 protocol = git
-#repo_url = https://github.com/ESCOMP/CMEPS.git
-repo_url = https://github.com/mvertens/CMEPS.git
+repo_url = https://github.com/ESCOMP/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cdeps]
-#tag = cdeps0.12.67
-hash = 70d6913
+tag = cdeps1.0.5
 protocol = git
-#repo_url = https://github.com/ESCOMP/CDEPS.git
-repo_url = https://github.com/mvertens/CDEPS.git
+repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
